@@ -69,11 +69,7 @@ function SWEP:PrimaryAttack()
 
 	local e = trace.Entity
 	if e ~= nil then
-		if (trace.HitPos:Distance(self.Owner:GetShootPos()) <= 75 and not e:IsDoor() and not e:IsVehicle()) then
-			self.Weapon:SendWeaponAnim(ACT_VM_HITCENTER)
-			self.Owner:FireBullets(bullet)
-			self.Weapon:EmitSound("physics/flesh/flesh_impact_bullet" .. math.random(3, 5) .. ".wav")
-		elseif (ValidEntity(e) and (trace.HitPos:Distance(self.Owner:GetShootPos()) <= 75 and (e:IsDoor() or e:IsVehicle()))) then
+		if (ValidEntity(e) and (trace.HitPos:Distance(self.Owner:GetShootPos()) <= 75 and (e:IsDoor() or e:IsVehicle()))) then
 			self.Weapon:SendWeaponAnim(ACT_VM_HITCENTER)
 			self.Owner:FireBullets(bullet)
 			self.Weapon:EmitSound("physics/flesh/flesh_impact_bullet" .. math.random(3, 5) .. ".wav")
