@@ -18,6 +18,7 @@ Updated by: FPtje Falco
 [CHANGE] The way prop protection works for admins
 [CHANGE] Moved the job change to F2 and I added a lot of commands/entities to it
 [CHANGE] The way Simple prop protection protects against slider bug: you can make the slider but you won't be able to do anything with the prop you made the slider on.
+[CHANGE] Lockpick being able to hit other things than doors
 [FIX] When use protection is on, doors couldn't be opened by some people, now they can.
 [FIX] Rare error with dropweapon
 [FIX] Exploit with shipments: Exploding them with more than one explosive would make them spawn more guns than usual.
